Remove retired qpus from docs and tutorials (#3154)
Rerun tutorials currently using retired (or almost-retired) QPUs kyiv
and sherbrooke

---------

Co-authored-by: Arnau Casau I Playa <arnau.casau@ibm.com>

--- a/docs/tutorials/chsh-inequality.ipynb
+++ b/docs/tutorials/chsh-inequality.ipynb
@@ -13,7 +13,7 @@
    "id": "6b41d6b3",
    "metadata": {},
    "source": [
-    "*Usage estimate: 4 minutes on IBM Kyiv (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 2 minutes on ibm_kingston (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
@@ -152,17 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "16f323fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ibm_torino'"
+       "'ibm_kingston'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/tutorials/chsh-inequality/extracted-outputs/6c77e40a-0.svg\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/tutorials/chsh-inequality/extracted-outputs/6c77e40a-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
      "execution_count": 3,
@@ -290,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9a5561eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/tutorials/chsh-inequality/extracted-outputs/9a5561eb-0.svg\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/tutorials/chsh-inequality/extracted-outputs/9a5561eb-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
      "execution_count": 6,
@@ -409,7 +409,7 @@
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/tutorials/chsh-inequality/extracted-outputs/f6267448-0.svg\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/tutorials/chsh-inequality/extracted-outputs/f6267448-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
      "metadata": {},
