--- a/docs/tutorials/combine-error-mitigation-techniques.ipynb
+++ b/docs/tutorials/combine-error-mitigation-techniques.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "480f0896-8638-436c-8694-9fa2d74964e0",
+   "id": "3445b0b5-7f26-4610-8e1b-5112df1fccb0",
    "metadata": {},
    "source": [
     "# Combine error mitigation options with the Estimator primitive\n",
-    "*Usage estimate: 8 minutes on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 8 minutes on ibm_fez (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c8e8f022-2450-401f-8b7b-d3673be9f871",
+   "id": "018313d1-d959-4011-81df-59bf7c157470",
    "metadata": {},
    "source": [
     "## Background\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "964b8213-f852-4ab6-95bf-c57f4127af86",
+   "id": "0f3d3378-8dac-489e-bf6d-292e693ec145",
    "metadata": {},
    "source": [
     "## Requirements\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0169882-5dfe-4db7-b951-14254d02114d",
+   "id": "069658fa-fa45-48b8-ab69-2610228bf6e4",
    "metadata": {},
    "source": [
     "## Setup"
@@ -49,8 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "44cb7018-2fbd-46f8-81e3-ceb919d07362",
+   "execution_count": 1,
+   "id": "95a72452-e067-4ee5-bcd9-e3bfcf0de208",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf93d326-e0f3-49c9-998b-c65495b0fbe8",
+   "id": "b2be0539-4f60-46e8-be1f-8869dae30888",
    "metadata": {},
    "source": [
     "## Step 1: Map classical inputs to a quantum problem\n",
@@ -79,17 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "616b7382-9e06-43c8-aa32-1162c27b9a04",
+   "execution_count": 2,
+   "id": "24abd7ba-bbb8-443b-9e81-866795d39a6c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/tutorials/combine-error-mitigation-techniques/extracted-outputs/616b7382-9e06-43c8-aa32-1162c27b9a04-0.avif\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/tutorials/combine-error-mitigation-techniques/extracted-outputs/24abd7ba-bbb8-443b-9e81-866795d39a6c-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02399b47-0eea-4859-83c4-77403a4b757f",
+   "id": "34fec53b-a8b2-461b-a20d-e8ad54b992fa",
    "metadata": {},
    "source": [
     "For our observable, let's take the Pauli $Z$ operator acting on the last qubit, $Z I \\cdots I$."
@@ -113,8 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d961ea45-99ef-43bf-89f7-94584b1eb74c",
+   "execution_count": 3,
+   "id": "9500ba7b-4542-465f-a4e1-60165d6b6d1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52e59040-7023-4af3-8d18-468c4d244ea9",
+   "id": "46eff743-de9f-4f55-9c47-02c6d6115b80",
    "metadata": {},
    "source": [
     "At this point, you could proceed to run your circuit and measure the observable. However, you also want to compare the output of the quantum device with the correct answer - that is, the theoretical value of the observable, if the circuit had been executed without error. For small quantum circuits you can calculate this value by simulating the circuit on a classical computer, but this is not possible for larger, utility-scale circuits. You can work around this issue with the \"mirror circuit\" technique (also known as \"compute-uncompute\"), which is useful for benchmarking the performance of quantum devices.\n",
@@ -140,17 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ed100452-a7f6-4e6c-ac7a-f4173cab0e98",
+   "execution_count": 4,
+   "id": "4dbde811-1ba9-47a8-85a0-dcaff054ed60",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/tutorials/combine-error-mitigation-techniques/extracted-outputs/ed100452-a7f6-4e6c-ac7a-f4173cab0e98-0.avif\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/tutorials/combine-error-mitigation-techniques/extracted-outputs/4dbde811-1ba9-47a8-85a0-dcaff054ed60-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9aa983c-fb1a-4ef6-9977-b5d6cb377336",
+   "id": "a37c97de-c942-4419-9409-5bcaef9c6876",
    "metadata": {},
    "source": [
     "## Step 2: Optimize problem for quantum hardware execution\n",
@@ -193,20 +193,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "68b5b3d9-af02-41d7-8990-4dad6cb1d098",
+   "execution_count": 6,
+   "id": "2c3ea768-0596-4db1-9b51-3ff78ec65818",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IBMBackend('ibm_fez')>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(\n",
     "    operational=True, simulator=False, min_num_qubits=127\n",
-    ")"
+    ")\n",
+    "backend"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b607d83-e7a2-4c03-83c9-3b52d23f8772",
+   "id": "46280e59-8c9f-4dd9-a365-6a230ceccf42",
    "metadata": {},
    "source": [
     "You can transpile your circuit for your chosen backend by creating a pass manager and then running the pass manager on the circuit. An easy way to create a pass manager is to use the [`generate_preset_pass_manager`](/docs/api/qiskit/qiskit.transpiler.generate_preset_pass_manager) function. See [Transpile with pass managers](/docs/guides/transpile-with-pass-managers) for a more detailed explanation of transpiling with pass managers."
@@ -214,17 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "767f36e0-39cd-4a6e-8090-7a417593ad6c",
+   "execution_count": 7,
+   "id": "027e829a-44d3-455e-b2bf-8ce0d7e26b9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/tutorials/combine-error-mitigation-techniques/extracted-outputs/767f36e0-39cd-4a6e-8090-7a417593ad6c-0.avif\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/tutorials/combine-error-mitigation-techniques/extracted-outputs/027e829a-44d3-455e-b2bf-8ce0d7e26b9b-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "761595f3-99bd-4a75-b493-e1a89afce6f6",
+   "id": "1865671e-2c7a-44dd-8938-fe4637bb5993",
    "metadata": {},
    "source": [
     "The transpiled circuit now contains only ISA instructions. The single-qubit gates have been decomposed in terms of $\\sqrt{X}$ gates and $R_z$ rotations, and the CX gates have been decomposed into [ECR gates](/docs/api/qiskit/qiskit.circuit.library.ECRGate#ecrgate) and single-qubit rotations.\n",
@@ -250,8 +262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "80651f1b-4b7c-4fd4-bd7f-ede857698abd",
+   "execution_count": 8,
+   "id": "12338588-a2d0-4b9c-9e49-e25ec8617b93",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +275,7 @@
       "              coeffs=[1.+0.j])\n",
       "\n",
       "Observable with layout applied:\n",
-      "SparsePauliOp(['IIZIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII'],\n",
+      "SparsePauliOp(['IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIZIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII'],\n",
       "              coeffs=[1.+0.j])\n"
      ]
     }
@@ -280,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d88a259-084a-4b46-802f-4121b11b7efd",
+   "id": "439d4edf-d1ad-49f3-b206-320958be4f82",
    "metadata": {},
    "source": [
     "## Step 3: Execute using Qiskit primitives\n",
@@ -299,8 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1902e8b6-f3b5-412c-b1ce-3b6c00aee285",
+   "execution_count": 9,
+   "id": "1114d15b-1408-4f4c-a20f-60f0da722325",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "072d6c32-4b39-4b53-b793-9c0f6f0e4a56",
+   "id": "919517c8-6f42-48d9-a976-53c715c00a4b",
    "metadata": {},
    "source": [
     "## Step 4: Post-process and return result in desired classical format\n",
@@ -356,14 +368,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "84977ce8-700f-44b2-b202-b13752d2dd94",
+   "execution_count": 10,
+   "id": "eef38976-0ca2-429a-b2dc-41aac69605f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/tutorials/combine-error-mitigation-techniques/extracted-outputs/84977ce8-700f-44b2-b202-b13752d2dd94-0.avif\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/tutorials/combine-error-mitigation-techniques/extracted-outputs/eef38976-0ca2-429a-b2dc-41aac69605f7-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
      "metadata": {},
@@ -405,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40db8903-b108-4d73-b984-afcc74bb5d91",
+   "id": "b400eae8-f38c-4566-82fe-0ccc5ee3f05d",
    "metadata": {},
    "source": [
     "At this small scale, it is difficult to see the effect of most of the error mitigation techniques, but zero-noise extrapolation does give a noticeable improvement. However, note that this improvement does not come for free, because the ZNE result also has a larger error bar."
@@ -413,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "192f35a4-a5f6-49f5-a92e-f5ebc30c6979",
+   "id": "958a5d23-ea09-4750-827c-e3bf6c3fa3f4",
    "metadata": {},
    "source": [
     "## Scale the experiment up\n",
@@ -423,14 +435,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "3b08a959-07d1-4a43-a01b-36b27a9574c3",
+   "execution_count": 11,
+   "id": "d7d8408b-faf1-4eda-ab9c-bdeaab01ff53",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/tutorials/combine-error-mitigation-techniques/extracted-outputs/3b08a959-07d1-4a43-a01b-36b27a9574c3-0.avif\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/tutorials/combine-error-mitigation-techniques/extracted-outputs/d7d8408b-faf1-4eda-ab9c-bdeaab01ff53-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
      "metadata": {},
@@ -533,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bf5cb8a-0cb4-4b35-86ec-551d8db85155",
+   "id": "32d9b036-ea0a-4484-b6ee-036ff732026b",
    "metadata": {},
    "source": [
     "When you compare the 50-qubit results with the 10-qubit results from earlier, you might note the following (your results might differ across runs):\n",
@@ -549,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d55d58a9-ee64-438e-bb17-15969ac43799",
+   "id": "9de59efa-f79e-4a8e-b985-3ea8ea10953f",
    "metadata": {},
    "source": [
     "## Tutorial survey\n",
@@ -557,14 +569,6 @@
     "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_cUCGeqAAI7suE3I)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8097f7e1-0e8c-4d49-b0a2-9aeb8d706660",
-   "metadata": {},
-   "source": [
-    "© IBM Corp. 2024"
    ]
   }
  ],
