--- a/docs/tutorials/repetition-codes.ipynb
+++ b/docs/tutorials/repetition-codes.ipynb
@@ -11,7 +11,7 @@
    },
    "source": [
     "# Repetition codes\n",
-    "*Estimated QPU usage: 4 seconds (tested on IBM Sherbrooke)*\n",
+    "*Usage estimate: less than 1 minute on ibm_brisbane (NOTE: This is an estimate only. Your runtime may vary.)*\n",
     "\n",
     "## Background\n",
     "\n",
@@ -87,32 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b588703a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<IBMBackend('test_eagle_us-east')>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_qubits = 5\n",
     "backend = service.least_busy(\n",
-    "    operational=True, simulator=False, min_num_qubits=num_qubits\n",
-    ")\n",
-    "backend"
+    "    operational=True,\n",
+    "    simulator=False,\n",
+    "    min_num_qubits=num_qubits,\n",
+    "    dynamic_circuits=True,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "606dff18",
    "metadata": {},
    "outputs": [],
@@ -190,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "dbe02949",
    "metadata": {},
    "outputs": [
@@ -200,7 +191,7 @@
        "<Image src=\"/docs/images/tutorials/repetition-codes/extracted-outputs/dbe02949-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "67b55eef",
    "metadata": {
     "slideshow": {
@@ -264,7 +255,7 @@
        "<Image src=\"/docs/images/tutorials/repetition-codes/extracted-outputs/67b55eef-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "67acea4f",
    "metadata": {},
    "outputs": [],
@@ -310,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "d53319ba",
    "metadata": {},
    "outputs": [],
@@ -324,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "df7421d0",
    "metadata": {
     "slideshow": {
@@ -340,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "1cba37f5",
    "metadata": {},
    "outputs": [
@@ -349,9 +340,9 @@
      "output_type": "stream",
      "text": [
       "Data (no correction):\n",
-      "{'101': 70, '111': 840, '110': 45, '011': 27, '010': 10, '001': 4, '000': 4}\n",
+      "{'011': 39, '111': 829, '101': 80, '001': 6, '110': 24, '010': 11, '100': 3, '000': 8}\n",
       "Syndrome (no correction):\n",
-      "{'00': 771, '01': 168, '10': 45, '11': 16}\n"
+      "{'00': 729, '01': 213, '11': 18, '10': 40}\n"
      ]
     }
    ],
@@ -364,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "7b7697f2",
    "metadata": {},
    "outputs": [
@@ -373,9 +364,9 @@
      "output_type": "stream",
      "text": [
       "Data (corrected):\n",
-      "{'011': 52, '111': 723, '101': 162, '001': 6, '110': 23, '000': 18, '100': 9, '010': 7}\n",
+      "{'101': 37, '111': 895, '011': 43, '110': 13, '000': 8, '010': 3, '100': 1}\n",
       "Syndrome (corrected):\n",
-      "{'00': 699, '01': 229, '10': 54, '11': 18}\n"
+      "{'00': 897, '01': 69, '11': 6, '10': 28}\n"
      ]
     }
    ],
@@ -393,12 +384,12 @@
    "source": [
     "## Step 4. Post-process, return result in classical format\n",
     "\n",
-    "You can see that the bit flip code detected and corrected many errors; resulting in fewer errors overall."
+    "You can see that the bit flip code detected and corrected many errors, resulting in fewer errors overall."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "fa59fb42",
    "metadata": {
     "slideshow": {
@@ -422,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "5b1ff3a3",
    "metadata": {},
    "outputs": [
@@ -430,10 +421,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed bit code experiment data measurement counts (no correction): {'101': 70, '111': 840, '110': 45, '011': 27, '010': 10, '001': 4, '000': 4}\n",
-      "Completed bit code experiment syndrome measurement counts (no correction): {'00': 771, '01': 168, '10': 45, '11': 16}\n",
-      "Bit flip errors were detected/corrected on 229/1000 trials.\n",
-      "A final parity error was detected on 156/1000 trials.\n"
+      "Completed bit code experiment data measurement counts (no correction): {'011': 39, '111': 829, '101': 80, '001': 6, '110': 24, '010': 11, '100': 3, '000': 8}\n",
+      "Completed bit code experiment syndrome measurement counts (no correction): {'00': 729, '01': 213, '11': 18, '10': 40}\n",
+      "Bit flip errors were detected/corrected on 271/1000 trials.\n",
+      "A final parity error was detected on 163/1000 trials.\n"
      ]
     }
    ],
@@ -453,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "7f1c2d48",
    "metadata": {},
    "outputs": [
@@ -461,10 +452,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed bit code experiment data measurement counts (corrected): {'011': 52, '111': 723, '101': 162, '001': 6, '110': 23, '000': 18, '100': 9, '010': 7}\n",
-      "Completed bit code experiment syndrome measurement counts (corrected): {'00': 699, '01': 229, '10': 54, '11': 18}\n",
-      "Bit flip errors were detected/corrected on 301/1000 trials.\n",
-      "A final parity error was detected on 259/1000 trials.\n"
+      "Completed bit code experiment data measurement counts (corrected): {'101': 37, '111': 895, '011': 43, '110': 13, '000': 8, '010': 3, '100': 1}\n",
+      "Completed bit code experiment syndrome measurement counts (corrected): {'00': 897, '01': 69, '11': 6, '10': 28}\n",
+      "Bit flip errors were detected/corrected on 103/1000 trials.\n",
+      "A final parity error was detected on 97/1000 trials.\n"
      ]
     }
    ],
