--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "95773b45-4aca-44f2-924b-253f63cee7fa",
+   "id": "7644e8cd-faf5-4384-87e0-86ce1a4f9a37",
    "metadata": {},
    "source": [
     "# Get backend information with Qiskit\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d35cee21-db7c-4641-83e4-c82ec7b45135",
+   "id": "76d54c88-3ff2-4836-b1fd-a266fa461130",
    "metadata": {
     "tags": [
      "version-info"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3db39b65-9b57-46e1-8829-848de1debb56",
+   "id": "039bc58f-530a-4c0b-90ee-c8bb126b34d0",
    "metadata": {},
    "source": [
     "This page explains how to use Qiskit to find information about your available backends."
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8e35982-38b5-4de1-b008-518aadc6ee81",
+   "id": "5e292f84-986b-4c94-a8c7-d1ede56d0d08",
    "metadata": {},
    "source": [
     "## List backends\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fd7473e-146f-48a3-9330-de76d6be02a0",
+   "id": "bbd100df-d4df-4f3b-9c1d-50c3f19bf2f9",
    "metadata": {},
    "source": [
     "<LegacyContent>\n",
@@ -77,19 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ab17b0f3-b2ef-4c5f-bce3-76273446a95d",
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 2,
+   "id": "9af5a961-cdfd-49d1-a198-988b2cc231ff",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('ibm_brisbane')>, <IBMBackend('ibm_sherbrooke')>]"
+       "[<IBMBackend('ibm_brisbane')>,\n",
+       " <IBMBackend('ibm_torino')>]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d5d3dfc-04ef-4786-b478-362c7f5a33f2",
+   "id": "6ae15e28-2542-4029-b2c6-f991d47d34bf",
    "metadata": {},
    "source": [
     "The [`QiskitRuntimeService.backend()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#backend) method (note that this is singular: *backend*) takes the name of the backend as the input parameter and returns an [`IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend) instance representing that particular backend:"
@@ -114,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f63fcc81-b92b-4d05-ab00-e57fa4791f12",
+   "id": "a7a460ca-1d01-4942-b76c-d79e6581d194",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebe4d781-362e-470e-844e-bfbae621cfc9",
+   "id": "87ea5116-6303-43e0-979d-f899bf7d4863",
    "metadata": {},
    "source": [
     "## Filter backends\n",
@@ -151,13 +150,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ef040a7d-f245-495e-a2ef-1fda69c78ba9",
+   "id": "ab782327-38fa-4882-86bf-5ac203638ae9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('ibm_brisbane')>, <IBMBackend('ibm_sherbrooke')>]"
+       "[<IBMBackend('ibm_brisbane')>,\n",
+       " <IBMBackend('ibm_torino')>]"
       ]
      },
      "execution_count": 3,
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5c9174e-c4a0-4a3a-8ead-c9738e6681fb",
+   "id": "f506e701-5284-48f9-bf94-fc92ff2970e7",
    "metadata": {},
    "source": [
     "Use these keyword arguments to filter by any attribute in backend configuration ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_configuration_schema.json)) or status ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_status_schema.json)). A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
@@ -179,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6d35d7fe-7503-4b7a-b3f7-c8816b029253",
+   "execution_count": 3,
+   "id": "e29239cd-6ad3-49dd-bf9b-7f4265697389",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a59d71ce-c7fe-4590-8384-8465a1da4ee9",
+   "id": "7c21c364-74d0-43ef-a20f-086fa461429d",
    "metadata": {},
    "source": [
     "## Static backend information\n",
@@ -212,15 +212,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "44e4c978-374c-4b68-9f83-da84423ecae4",
+   "execution_count": 7,
+   "id": "352258ac-3c37-42cf-bde9-f1c6891a869b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: ibm_sherbrooke\n",
+      "Name: ibm_brisbane\n",
       "Version: 2\n",
       "No. of qubits: 127\n",
       "\n"
@@ -228,7 +228,7 @@
     }
    ],
    "source": [
-    "backend = service.backend(\"ibm_sherbrooke\")\n",
+    "backend = service.backend(\"ibm_brisbane\")\n",
     "\n",
     "print(\n",
     "    f\"Name: {backend.name}\\n\"\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6553364b-6115-419e-9bbe-5b719097cd15",
+   "id": "4e721856-84c0-4378-9929-4e9916e479bc",
    "metadata": {},
    "source": [
     "For a full list of attributes, see the [`IBMBackend` API documentation](/docs/api/qiskit-ibm-runtime/ibm-backend)."
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0894bfbe-e8c6-4a8e-8c9b-3a4ccf5b6fc0",
+   "id": "e77a73d6-8022-4aed-82e9-0c19f6700391",
    "metadata": {},
    "source": [
     "## Dynamic backend information\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1f6dc981-cf88-4b10-9e45-5b42afbdac6d",
+   "id": "2287792c-3e80-4291-abe6-130ace6bf45d",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1c19258-c2e9-44bf-877c-e2524e755b1a",
+   "id": "ebf77e68-6baf-46bd-982a-a10d4f8b6869",
    "metadata": {},
    "source": [
     "### Instruction properties\n",
@@ -396,8 +396,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "6a1d1d34-1c42-4b27-9038-b7bc210ea3b5",
+   "execution_count": 7,
+   "id": "093c8544-d9c1-4cf1-a643-df2d14942795",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1db6f101-7f4e-4dec-9816-7a03960be988",
+   "id": "3fc6cb8a-28e1-4add-af5e-c0f046f63be1",
    "metadata": {},
    "source": [
     "The following cell shows the properties for a measurement operation (including the readout error) on qubit 0."
@@ -425,8 +425,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "c1125d67-1278-4f00-adaa-32028c0a9610",
+   "execution_count": 8,
+   "id": "daf7753b-9b77-451e-80a6-ea9212be77f6",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c90decc4-501e-47ce-8d6d-8eea3390198f",
+   "id": "db2e6ddb-2636-469a-b0b5-eae864857a1a",
    "metadata": {},
    "source": [
     "## Next steps\n",
