--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -112,7 +112,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "# You can skip this step if you have a target backend, e.g.\n",
-    "# backend_name = \"ibm_sherbrooke\"\n",
+    "# backend_name = \"ibm_brisbane\"\n",
     "# You'll need to specify the credentials when initializing QiskitRuntimeService, if they were not previously saved.\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
