Replace videos with YouTube thumbnails

--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
@@ -23,10 +23,13 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "<iframe src=\"https://video.ibm.com/embed/recorded/134056235?showtitle=false\" loading=\"lazy\" width=\"100%\" height=\"500px\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen>\n",
-    "</iframe>\n",
     "\n",
-    "Access the [YouTube video](https://youtu.be/2wticzHE1vs?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson."
+    "  <ImageLink\n",
+    "    title=\"Quantum Query Algorithms | Understanding Quantum Information & Computation | Lesson 05\"\n",
+    "    alt=\"Video thumbnail\"\n",
+    "    href=\"https://youtu.be/2wticzHE1vs?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
+    "    src=\"/learning/images/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction/youtube-thumbnail.avif\"\n",
+    "  />"
    ]
   }
  ],
