--- a/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/introduction.ipynb
@@ -25,10 +25,13 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "<iframe src=\"https://video.ibm.com/embed/recorded/134056243?showtitle=false\" loading=\"lazy\" width=\"800\" height=\"450\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen>\n",
-    "</iframe>\n",
     "\n",
-    "Access the [YouTube video](https://youtu.be/hnpjC8WQVrQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson."
+    "  <ImageLink\n",
+    "    title=\"Grover's Algorithm | Understanding Quantum Information & Computation | Lesson 08\"\n",
+    "    alt=\"Video thumbnail\"\n",
+    "    href=\"https://youtu.be/hnpjC8WQVrQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
+    "    src=\"/learning/images/courses/fundamentals-of-quantum-algorithms/grover-algorithm/introduction/youtube-thumbnail.avif\"\n",
+    "  />"
    ]
   }
  ],
