--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/introduction.ipynb
@@ -29,10 +29,13 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "<iframe src=\"https://video.ibm.com/embed/recorded/134056222?showtitle=false\" loading=\"lazy\" width=\"800\" height=\"450\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen>\n",
-    "</iframe>\n",
     "\n",
-    "Access the [YouTube video](https://youtu.be/2wxxvwRGANQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson."
+    "  <ImageLink\n",
+    "    title=\"Quantum Algorithmic Foundations | Understanding Quantum Information & Computation | Lesson 06\"\n",
+    "    alt=\"Video thumbnail\"\n",
+    "    href=\"https://youtu.be/2wxxvwRGANQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
+    "    src=\"/learning/images/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/introduction/youtube-thumbnail.avif\"\n",
+    "  />"
    ]
   }
  ],
