--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/introduction.ipynb
@@ -37,9 +37,13 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://video.ibm.com/embed/recorded/134056231?showtitle=false\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>\n",
     "\n",
-    "Access the [YouTube video](https://youtu.be/CeK9ry8G8HQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson."
+    "  <ImageLink\n",
+    "    title=\"Density Matrices | Understanding Quantum Information & Computation | Lesson 09\"\n",
+    "    alt=\"Video thumbnail\"\n",
+    "    href=\"https://youtu.be/CeK9ry8G8HQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
+    "    src=\"/learning/images/courses/general-formulation-of-quantum-information/density-matrices/introduction/youtube-thumbnail.avif\"\n",
+    "  />"
    ]
   }
  ],
