--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -33,7 +33,7 @@ This section summarizes the recent enhancements and new features for the new [IB
 
 - Added instance job filter: The platform now displays only your workloads by default. On the dashboard, you will see only the latest workloads you have submitted to instances within your account.
 
-![Only the latest workloads now shown by default](/docs/images/guides/latest-updates/workloads.png)
+![Only the latest workloads now shown by default](/docs/images/guides/latest-updates/workloads.avif)
 
 - A new provider release, featuring:
   - Support for private jobs when using Qiskit Functions
