--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/representation-equivalence.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/representation-equivalence.ipynb
@@ -33,7 +33,7 @@
     "the first statement in our list implies the second, the second implies the third, the third implies the fourth, and the fourth statement implies the first.\n",
     "This establishes that all four statements are equivalent — which is to say that they're either all true or all false for a given choice of $\\Phi$ — because the implications can be followed transitively from any one statement to any other.\n",
     "\n",
-    "This is a common strategy when proving that a collection of statements are equivalent, and a useful trick to use in such a context is to set the implications up in a way that makes them as easy to prove as possible.\n",
+    "This is a common strategy when proving that a collection of statements are equivalent, and a useful trick to use in such a context is to set up the implications in a way that makes them as easy to prove as possible.\n",
     "That is the case here — and in fact we've already encountered two of the four implications.\n",
     "\n",
     "## Channels to Choi matrices\n",
