--- a/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
+++ b/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
@@ -7,7 +7,7 @@ description: Learn how quantum computers can efficiently solve problems, includi
 
 Welcome to *Fundamentals of Quantum Algorithms,* the second course in the *Understanding Quantum Information and Computation* series comprising the following courses:
 
-- Basics of quantum information
+- [Basics of quantum information](learning/courses/basics-of-quantum-information/)
 - Fundamentals of quantum algorithms
 - General formulation of quantum information
 - Foundations of quantum error correction
