--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
@@ -13,7 +13,7 @@
     "In this first lesson of the course, we'll formulate a simple algorithmic framework — known as the *query model* — and explore the advantages that quantum computers offer within this framework.\n",
     "\n",
     "The query model of computation is like a petri dish for quantum algorithmic ideas.\n",
-    "It's rigid and unnatural, in the sense that it doesn't accurately represent the sorts of computational problems we generally care about in practice, but it has nevertheless proved to be incredibly useful as a tool for developing quantum algorithmic techniques.\n",
+    "It's rigid and unnatural in the sense that it doesn't accurately represent the sorts of computational problems we generally care about in practice, but it has nevertheless proved to be incredibly useful as a tool for developing quantum algorithmic techniques.\n",
     "This includes the ones that power the most well-known quantum algorithms, such as Shor's algorithm for integer factorization.\n",
     "The query model also happens to be a very useful framework for *explaining* quantum algorithmic techniques.\n",
     "\n",
