--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-algorithm.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-algorithm.ipynb
@@ -11,7 +11,7 @@
     "In the context of quantum computing this problem is sometimes referred to as *Deutsch's problem*, and we'll follow that nomenclature in this lesson.\n",
     "\n",
     "To be precise, the input is represented by a function $f:\\Sigma \\rightarrow \\Sigma$ from one bit to one bit.\n",
-    "There are 4 such functions:\n",
+    "There are four such functions:\n",
     "\n",
     "$$\n",
     "\\rule[-10mm]{0mm}{10mm}\n",
