--- a/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/analysis.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/analysis.ipynb
@@ -133,7 +133,7 @@
     "H^{\\otimes n} Z_{\\mathrm{OR}} H^{\\otimes n} = 2 H^{\\otimes n} \\vert 0^n \\rangle \\langle 0^n \\vert H^{\\otimes n} - \\mathbb{I} = 2 \\vert u \\rangle \\langle u \\vert - \\mathbb{I},\n",
     "$$\n",
     "\n",
-    "using the same notation $\\vert u \\rangle$ that we used above for the uniform superposition over all $n$-bit strings.\n",
+    "using the same notation, $\\vert u \\rangle,$ that we used above for the uniform superposition over all $n$-bit strings.\n",
     "\n",
     "And now we have what we need to compute the action of $G$ on $\\vert A_0\\rangle$ and $\\vert A_1\\rangle.$\n",
     "First let's compute the action of $G$ on $\\vert A_0\\rangle.$\n",
