--- a/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
+++ b/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
@@ -9,7 +9,7 @@ Welcome to *Fundamentals of Quantum Algorithms,* the second course in the *Under
 
 - [Basics of quantum information](learning/courses/basics-of-quantum-information/)
 - Fundamentals of quantum algorithms
-- General formulation of quantum information
+- [General formulation of quantum information](/learning/courses/general-formulation-of-quantum-information/)
 - Foundations of quantum error correction
 
 This course explores computational advantages of quantum information, including what we can do with quantum computers and their advantages over classical computers. 
