--- a/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/analysis.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/analysis.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "Now let's consider the action of $G$ on the quantum state vectors $\\vert A_0\\rangle$ and $\\vert A_1\\rangle.$\n",
     "\n",
-    "First let's observe that the operation $Z_f$ has a very simple action on $\\vert A_0\\rangle$ and $\\vert A_1\\rangle.$\n",
+    "First, let's observe that the operation $Z_f$ has a very simple action on $\\vert A_0\\rangle$ and $\\vert A_1\\rangle.$\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
