--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm.ipynb
@@ -167,7 +167,7 @@
     "There is a catch, however, which is that *probabilistic* classical algorithms can solve the Deutsch-Jozsa problem with very high probability using just a few queries.\n",
     "In particular, if we simply choose a few different strings of length $n$ randomly, and query $f$ on those strings, it's unlikely that we'll get the same function value for all of them when $f$ is balanced.\n",
     "\n",
-    "To be specific, if we choose $k$ input strings $x^1,\\ldots,x^k \\in \\Sigma^n$ uniformly at random, evaluate $f(x^1),\\ldots,f(x^k),$ and answer $0$ if the function values are all the same and $1$ if not, then we'll always be correct when $f$ is constant, and wrong in the case that $f$ is balanced with probability just $2^{-k + 1}.$\n",
+    "To be specific, if we choose $k$ input strings $x^1,\\ldots,x^k \\in \\Sigma^n$ uniformly at random, evaluate $f(x^1),\\ldots,f(x^k),$ and answer $0$ if the function values are all the same, and $1$ if not, then we'll always be correct when $f$ is constant, and wrong in the case that $f$ is balanced with probability just $2^{-k + 1}.$\n",
     "If we take $k = 11,$ for instance, this algorithm will answer correctly with probability greater than $99.9$%.\n",
     "\n",
     "For this reason, we do still have a rather modest advantage of quantum over classical algorithms — but it is nevertheless a quantifiable advantage representing an improvement over Deutsch's algorithm.\n",
