--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/simon-algorithm.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/simon-algorithm.ipynb
@@ -100,7 +100,7 @@
     "\\frac{1}{2^n} \\sum_{x\\in\\Sigma^n} \\sum_{y\\in\\Sigma^n} (-1)^{x\\cdot y} \\vert f(x) \\rangle \\vert y\\rangle\n",
     "$$\n",
     "\n",
-    "At this point the analysis diverges from the ones for the previous algorithms in this lesson.\n",
+    "At this point, the analysis diverges from the ones for the previous algorithms in this lesson.\n",
     "\n",
     "We're interested in the probability for the measurements to result in each possible string $y\\in\\Sigma^n.$\n",
     "Through the rules for analyzing measurements described in the *Multiple systems* lesson of the *Basics of quantum information* course, we find that the probability $p(y)$ to obtain the string $y$ is equal to\n",
