--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
@@ -384,7 +384,7 @@
     "$$\n",
     "\n",
     "Here, $A_0,\\ldots,A_{N-1}$ are matrices that all have the same dimensions:\n",
-    "their columns correspond to the classical states of the input system $\\mathsf{X}$ and their rows correspond to the classical states of the output system, whether it's $\\mathsf{X}$ or some other system $\\mathsf{Y}.$\n",
+    "their columns correspond to the classical states of the input system, $\\mathsf{X},$ and their rows correspond to the classical states of the output system, whether it's $\\mathsf{X}$ or some other system $\\mathsf{Y}.$\n",
     "In order for $\\Phi$ to be a valid channel these matrices must satisfy the following condition.\n",
     "\n",
     "$$\n",
