--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/measuring-computational-cost.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/measuring-computational-cost.ipynb
@@ -253,7 +253,7 @@
     "If for some reason we changed our minds and decided to include XOR gates in our set of elementary operations, we would need 1 AND gate, 1 XOR gate, and 2 FANOUT gates to build a half adder.\n",
     "\n",
     "Moving on to the more significant bits, we can use a similar procedure, but this time including the carry bit from each previous position into our calculation.\n",
-    "By cascading 2 half adders and taking the OR of the carry bits they produce, we can create what's known as a *full adder*.\n",
+    "By cascading two half adders and taking the OR of the carry bits they produce, we can create what's known as a *full adder*.\n",
     "\n",
     "![A full-adder](/learning/images/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/full-adder.svg)\n",
     "\n",
