--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/introduction.ipynb
@@ -14,7 +14,7 @@
     "In the "Basics of quantum information" course, we discussed a framework for quantum information in which quantum states are represented by quantum state vectors, operations are represented by unitary matrices, and so on.\n",
     "We then used this framework in the "Fundamentals of quantum algorithms" course to describe and analyze quantum algorithms.\n",
     "\n",
-    "There are, in fact, two common mathematical descriptions of quantum information, with the one introduced in *Basics of quantum information* being the simpler of the two. For this reason we'll refer to it as the *simplified formulation of quantum information.*\n",
+    "There are actually two common mathematical descriptions of quantum information, with the one introduced in "Basics of quantum information" being the simpler of the two. For this reason we'll refer to it as the *simplified formulation of quantum information.*\n",
     "\n",
     "In this lesson, we'll begin our exploration of the second description, which is the *general formulation of quantum information.*\n",
     "It is, naturally, consistent with the simplified formulation, but offers noteworthy advantages.\n",
