--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/density-matrix-basics.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/density-matrix-basics.ipynb
@@ -16,7 +16,7 @@
     "## Definition\n",
     "\n",
     "Suppose that we have a quantum system named $\\mathsf{X},$ and let $\\Sigma$ be the (finite and nonempty) classical state set of this system.\n",
-    "Here we're mirroring the naming conventions used in the *Basics of quantum information* course, which we'll continue to do when the opportunity arises.\n",
+    "Here we're mirroring the naming conventions used in the "Basics of quantum information" course, which we'll continue to do when the opportunity arises.\n",
     "\n",
     "In the general formulation of quantum information, a quantum state of the system $\\mathsf{X}$ is described by a *density matrix* $\\rho$ whose entries are complex numbers and whose indices (for both its rows and columns) have been placed in correspondence with the classical state set $\\Sigma.$\n",
     "The lowercase Greek letter $\\rho$ is a conventional first choice for the name of a density matrix, although $\\sigma$ and $\\xi$ are also common choices.\n",
