--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/density-matrix-basics.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/density-matrix-basics.ipynb
@@ -66,7 +66,7 @@
     "= \\alpha_{0,0} + \\alpha_{1,1} + \\cdots + \\alpha_{n-1,n-1}.\n",
     "$$\n",
     "\n",
-    "The trace is a *linear* function: for any two square matrices $A$ and $B$ of the same size and any two complex numbers $\\alpha$ and $\\beta,$ the following equation is always true.\n",
+    "The trace is a *linear* function: for any two square matrices $A$ and $B$ of the same size, and any two complex numbers $\\alpha$ and $\\beta,$ the following equation is always true.\n",
     "\n",
     "$$\n",
     "\\operatorname{Tr}(\\alpha A + \\beta B) = \\alpha \\operatorname{Tr}(A) + \\beta\\operatorname{Tr}(B)\n",
