--- a/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/grover-algorithm-description.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/grover-algorithm-description.ipynb
@@ -14,7 +14,7 @@
     "## Phase query gates\n",
     "\n",
     "Grover's algorithm makes use of operations known as *phase query gates*.\n",
-    "In contrast to an ordinary query gate $U_f,$ defined for a given function $f$ in the usual way described above, a phase query gate for the function $f$ is defined as\n",
+    "In contrast to an ordinary query gate $U_f,$ defined for a given function $f$ in the usual way described previously, a phase query gate for the function $f$ is defined as\n",
     "\n",
     "$$\n",
     "Z_f \\vert x\\rangle = (-1)^{f(x)} \\vert x\\rangle\n",
