--- a/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/phase-estimation-procedure.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/phase-estimation-procedure.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "# Phase estimation procedure\n",
     "\n",
-    "Next we'll discuss the *phase-estimation procedure*, which is a quantum algorithm for solving the phase estimation problem.\n",
+    "Next, we'll discuss the *phase-estimation procedure*, which is a quantum algorithm for solving the phase estimation problem.\n",
     "\n",
     "We'll begin with a low-precision warm-up, which explains some of the basic intuition behind the method.\n",
     "We'll then talk about the *quantum Fourier transform*, which is an important quantum operation used in the phase-estimation procedure, as well as its quantum circuit implementation.\n",
