--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
@@ -377,7 +377,7 @@
     "## Kraus representations\n",
     "\n",
     "Now we'll discuss *Kraus representations*, which offer a convenient formulaic way to express the action of a channel through matrix multiplication and addition.\n",
-    "In particular, a Kraus representation is a specification of a channel $\\Phi$ in the following form.\n",
+    "In particular, a Kraus representation is a specification of a channel, $\\Phi,$ in the following form.\n",
     "\n",
     "$$\n",
     "\\Phi(\\rho) = \\sum_{k = 0}^{N-1} A_k \\rho A_k^{\\dagger}\n",
